# intermediary_service

./: .env.dist  .gitignore  README.md  alembic.ini  pyproject.toml
app/: settings.py
app/api/: endpoints.py
app/celery/: __init__.py  parser_tasks.py  publisher_tasks.py  shared_tasks.py
app/database/mysqldb_mod/: __init__.py  product.py  test.py
app/database/postgres/: __init__.py  crud.py  product.py
app/database/redis/: __init__.py
app/models/: base.py  product.py
app/schemas/: category.py  currency.py
app/schemas/product/: parse.py  publish.py
app/services/: parsing.py
app/utils/: currency.py
tests/: test_cruds.py  test_endpoints.py
