[project]
name = "intermediary-service"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "sqlalchemy>=2.0.40",
    "alembic>=1.15.2",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "asyncpg>=0.30.0",
    "redis>=5.2.1",
    "loguru>=0.7.3",
    "celery>=5.4.0",
    "aio-pika>=9.5.5",
    "setuptools>=78.1.0",
    "pytest>=8.3.5",
    "currencyapicom>=0.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "shared @ file:///Users/ke1wi/Documents/Moisya/intermediary_service/shared",
    "ruff>=0.11.2",
    "black>=25.1.0",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
